<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.tilab.jade</groupId>
  <artifactId>jade</artifactId>
  <version>4.6.0-6874</version>
  <name>TILAB-JADE-Platform-FIPA-4.6.0</name>
  <description>JADE Multi-Agent platform compiled with Java JDK-11 or 17</description>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <build>

     <resources>
       <resource>
          <directory>src/main/java</directory>
          <excludes>
            <exclude>**/*.java</exclude>
          </excludes>
        </resource>
     </resources>

     <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.2.2</version>
            <configuration>
               <archive>
                  <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
               </archive>
            </configuration>
        </plugin>


         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.3.2</version>
             <configuration>
                  <source>1.8</source>
                  <target>17</target>

                  <compilerArgs>
                    <arg>--add-exports</arg>
                    <arg>java.desktop/com.sun.java.swing.plaf.motif.resources=ALL-UNNAMED</arg>
                    <arg>--add-exports</arg>
                    <arg>java.desktop/com.sun.java.swing.plaf.windows.resources=ALL-UNNAMED</arg>
                    <arg>--add-opens</arg>
                    <arg>java.xml/jdk.xml.internal=ALL-UNNAMED</arg>
                  </compilerArgs>
                </configuration>
          </plugin>
          

     </plugins>
     
     
  </build>







</project>
